--- a/email.html
+++ b/email.html
@@ -105,7 +105,7 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script>
 
-    const API_BASE_URL = "http://127.0.0.1:8000/api/v1/";
+    const API_BASE_URL = "https://choiceserver.duckdns.org:8000/api/v1/";
 
     function fetch_brand_guidelines(business_name){
         const url = API_BASE_URL + "get_brand_guidelines/" + business_name;
