--- a/html/generate-email-titles.html
+++ b/html/generate-email-titles.html
@@ -86,7 +86,7 @@
     text-align: left;"></div>
             <div id="spinner" class="spinner-border text-primary d-none text-white" role="status"></div>
             <div class="d-grid gap-2">
-              <button id="generate-email-button" type="button" class="btn btn-primary gen-title bg-gradient-primary shadow-primary border-radius-lg p-3" style="margin: 40px; background-color: white; color: #a4cbc;">✨ Regenerate Title ✨</button>
+              <button id="generate-email-button" type="button" class="btn btn-primary gen-title bg-gradient-primary shadow-primary border-radius-lg p-3" style="margin: 40px; background-color: white; color: #a4cbc;">✨ Generate ✨</button>
             </div>
           </div>
         </div>
@@ -188,69 +188,46 @@
             </div>
           </div>
         </div>
-
-        <!-- Modal -->
-
-        <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-hidden="true" style=".modal-backdrop {
-    position: relative;
-    z-index: 9999}
-">
-          <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLongTitle">Brand Guidelines</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
-                </button>
-              </div>
-              <div class="modal-body">
-                <div class="form-group">
-                  <textarea id="brand-guidelines" class="form-control form-control-sm" rows="5" placeholder="List your brand guidelines"></textarea>
-                </div>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Save changes</button>
-              </div>
-            </div>
-          </div>
-        </div>
-
-
-<!--
-        <div class="modal fade"  id="exampleModalCenter1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Your modal title</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body">
-                <div class="form-group">
-                  <textarea id="brand-guidelines" class="form-control form-control-sm" rows="5" placeholder="List your brand guidelines"></textarea>
-                </div>
-              </div>
-              <div class="modal-footer justify-content-between">
-                <button type="button" class="btn bg-gradient-dark mb-0" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn bg-gradient-primary mb-0">Save changes</button>
-              </div>
-            </div>
-          </div>
-        </div>
--->
       </div>
     </div>
   </div>
 </section>
+
+<!-- Modal should not be positioned inside the fixed position element i.e <section> tag above
+  https://stackoverflow.com/a/11788713
+-->
+
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Brand Guidelines</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="form-group">
+          <textarea id="brand-guidelines" class="form-control form-control-sm" rows="5" placeholder="List your brand guidelines"></textarea>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 <!-- -------- END HEADER 8 w/ card over right bg image ------- -->
 <!--   Core JS Files   -->
-<script src="../assets/js/core/popper.min.js" type="text/javascript"></script>
-<script src="../assets/js/core/bootstrap.min.js" type="text/javascript"></script>
-<script src="../assets/js/plugins/perfect-scrollbar.min.js"></script>
+<!-- <script src="../assets/js/core/popper.min.js" type="text/javascript"></script> -->
+<!-- <script src="../assets/js/core/bootstrap.min.js" type="text/javascript"></script> -->
+<!-- <script src="../assets/js/plugins/perfect-scrollbar.min.js"></script> -->
 <!-- Control Center for Material UI Kit: parallax effects, scripts for the example pages etc -->
 
 <script src="../assets/js/material-kit.min.js?v=3.0.4" type="text/javascript"></script>
 
-<!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">-->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script>
@@ -280,7 +257,7 @@
             "animal_breed": $("#pet-breed").val().trim(),
             "last_pickup_city": $("#pickup-city").val().trim(),
             "last_delivery_city": $("#dropoff-city").val().trim()
-<!--            "feedback_instruction": $("#feedback-instruction").val().trim()-->
+            // "feedback_instruction": $("#feedback-instruction").val().trim()
         }
 
         return $.ajax({
@@ -317,8 +294,8 @@
     }
 
     function generate_reason_html(reason){
-        check_mark_html="<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\" fill=\"green\" class=\"bi bi-check-circle\" viewBox=\"0 0 16 16\"><path d=\"M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16\"/><path d=\"M10.97 4.97a.235.235 0 0 0-.02.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05\"/></svg> ";
-        check_mark_html = "<p>" + check_mark_html + reason + "</p>";
+        check_mark_html="<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\" fill=\"#66ff00\" class=\"bi bi-check-circle\" viewBox=\"0 0 16 16\"><path d=\"M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16\"/><path d=\"M10.97 4.97a.235.235 0 0 0-.02.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05\"/></svg> ";
+        check_mark_html = "<h6 class=\"text-white\">" + check_mark_html + reason + "</h6>";
         return check_mark_html
     }
 
