fix several UI bugs

--- a/html/generate-email-titles.html
+++ b/html/generate-email-titles.html
@@ -20,9 +20,7 @@
   <link rel="icon" type="image/png" href="../assets/img/favicon.png">
   <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 
-  <title>
-    Choice AI
-  </title>
+  <title>Choice AI</title>
   <!--     Fonts and icons     -->
   <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
@@ -37,11 +35,11 @@
   <link id="pagestyle" href="../assets/css/material-kit.css?v=3.0.4" rel="stylesheet" />
   <style>
     .cardBackground{
-  background-position: center;
-  background-image: url('../assets/img/illustrations/wave1.jpeg');
-  background-repeat: no-repeat;
-  background-size: cover;
-}
+      background-position: center;
+      background-image: url('../assets/img/illustrations/wave1.jpeg');
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
   </style>
 </head>
 
@@ -49,9 +47,9 @@
 <!-- Navbar -->
 <div class="container position-sticky z-index-sticky top-0">
   <div class="row">
-    <div class="col-12">
+    <div class="col">
       <nav class="navbar navbar-expand-lg  blur border-radius-xl mt-4 top-0 z-index-3 shadow position-absolute my-3 py-2 start-0 end-0 mx-4">
-        <div class="container-fluid px-0">
+        <div class="container-fluid">
           <a class="navbar-brand font-weight-bolder ms-sm-3" href="https://getchoice.app" rel="tooltip" title="Designed and Coded by Creative Tim" data-placement="bottom" target="_blank">
             Choice AI
           </a>
@@ -73,36 +71,38 @@
     </div>
   </div>
 </div>
+
 <!-- -------- START HEADER 8 w/ card over right bg image ------- -->
 <section style="margin-top: 4rem;">
   <div class="page-header min-vh-100">
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
-        <div class="position-relative h-100 m-3 px-7 border-radius-lg d-flex flex-column justify-content-center" style="background-image: url('../assets/img/illustrations/illustration-signin.jpg'); background-size: cover;" loading="lazy"></div>
-        <div class="col-6 d-lg-flex d-none h-100 my-auto pe-0 position-absolute top-0 start-0 text-center justify-content-center flex-column">
+        
+        <div class="col-6 d-flex justify-content-center text-center flex-column">
           <div class="card-body cardBackground">
-            <h1 id="generated-email-h4" contenteditable="true" class="card-title" style="padding:5rem; color:white; font-family: 'Lato'; font-size: 700%;">Your personalized email subject </h1>
-            <div id="generated-email-body" class="text-white" style="margin-left: 40px;
-    text-align: left;"></div>
-            <div id="spinner" class="spinner-border text-primary d-none text-white" role="status"></div>
+            <h1 id="generated-email-h4" contenteditable="true" class="card-title" style="padding:5rem; color:white; font-family: 'Lato'; font-size: 700%;">Your personalized email subject</h1>
+            <div id="generated-email-body" class="text-white" style="margin: 8%; text-align: left;"></div>
+            <div id="spinner" class="spinner-border text-primary text-white d-none align-self-center" role="status"></div>
             <div class="d-grid gap-2">
-              <button id="generate-email-button" type="button" class="btn btn-primary gen-title bg-gradient-primary shadow-primary border-radius-lg p-3" style="margin: 40px; background-color: white; color: #a4cbc;">✨ Generate ✨</button>
+              <button id="generate-email-button" type="button" class="btn btn-primary gen-title bg-gradient-primary shadow-primary border-radius-lg p-3" style="margin: 8%; background-color: white; color: #a4cbc;">✨ Generate ✨</button>
             </div>
           </div>
         </div>
-        <div class="col-xl-5 col-lg-6 col-md-7 d-flex flex-column ms-auto me-auto ms-lg-auto me-lg-5">
+
+        <div class="col-4 d-flex flex-column">
           <div class="me-3 card d-flex blur justify-content-center shadow-lg my-sm-0 my-sm-6 mt-8 mb-5">
-            <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2 bg-transparent">
-              <div class="bg-gradient-primary shadow-primary border-radius-lg p-3">
+            <div class="bg-gradient-primary shadow-primary border-radius-lg p-3">
                 <h6 class="text-white text-primary mb-0">Email Context</h6>
-              </div>
             </div>
+            <!-- <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2 bg-transparent">
+              
+            </div> -->
             <div class="card-body">
               <!--                Description-->
               <div class="form-group mb-0 mt-md-0 mt-4">
                 <div class="input-group input-group-static mb-4">
                   <label>Rough email draft</label>
-                  <textarea id="email-description" name="message" class="form-control" id="message" rows="4" placeholder="Welcome email assuring a safe pet journey"></textarea>
+                  <textarea id="email-description" name="message" class="form-control" rows="4" placeholder="Welcome email assuring a safe pet journey"></textarea>
                 </div>
               </div>
               <div class="form-group mb-0 mt-md-0 mt-4">
@@ -118,35 +118,35 @@
                     <tr>
                       <td>
                         <div class="form-group">
-                          <input id="pet-name" class="form-control form-control-sm" name="pet-name" value="Valentine" placeholder="Pet Name" />
+                          <input id="pet-name" class="form-control form-control" name="pet-name" value="Valentine" placeholder="Pet Name">
                         </div>
                       </td>
                     </tr>
                     <tr>
                       <td>
-                        <div class="form-group">
-                          <input id="pet-breed" class="form-control form-control-sm" name="pet-breed" value="Australian Cattle Dog" placeholder="Pet Breed" />
+                        <div class="form-group is-filled">
+                          <input id="pet-breed" class="form-control form-control" name="pet-breed" value="Australian Cattle Dog" placeholder="Pet Breed">
                         </div>
                       </td>
                     </tr>
                     <tr>
                       <td>
-                        <div class="form-group">
-                          <input id="first-name" class="form-control form-control-sm" name="first-name"  value="Neha" placeholder="First Name" />
+                        <div class="form-group is-filled">
+                          <input id="first-name" class="form-control form-control" name="first-name" value="Neha" placeholder="First Name">
                         </div>
                       </td>
                     </tr>
                     <tr>
                       <td>
-                        <div class="form-group">
-                          <input id="pickup-city" class="form-control form-control-sm" name="pickup-city" placeholder="Pickup City" />
+                        <div class="form-group is-filled">
+                          <input id="pickup-city" class="form-control form-control" name="pickup-city" placeholder="Pickup City">
                         </div>
                       </td>
                     </tr>
                     <tr>
                       <td>
-                        <div class="form-group">
-                          <input id="dropoff-city" class="form-control form-control-sm" name="dropoff-city" placeholder="Drop off City" />
+                        <div class="form-group is-filled">
+                          <input id="dropoff-city" class="form-control form-control" name="dropoff-city" placeholder="Drop off City">
                         </div>
                       </td>
                     </tr>
@@ -157,7 +157,7 @@
               <div class="form-group mb-0 mt-md-0 mt-4">
                 <div class="input-group input-group-static mb-4">
                   <div class="dropdown">
-                    <label for="tone">Tone</label><br/>
+                    <label for="tone">Tone</label><br>
                     <select name="tone" id="tone" class="btn btn-sm  bg-gradient-primary btn-default dropdown-toggle">
                       <option value="formal">Formal</option>
                       <option value="vibrant">Vibrant</option>
