--- a/html/generate-email-titles.html
+++ b/html/generate-email-titles.html
@@ -84,7 +84,7 @@
             <div id="generated-email-body" class="text-white" style="margin: 8%; text-align: left;"></div>
             <div id="spinner" class="spinner-border text-primary text-white d-none align-self-center" role="status"></div>
             <div class="d-grid gap-2">
-              <button id="generate-email-button" type="button" class="btn btn-primary gen-title bg-gradient-primary shadow-primary border-radius-lg p-3" style="margin: 8%; background-color: white; color: #a4cbc;">✨ Generate ✨</button>
+              <button id="generate-email-button" type="button" class="btn gen-title shadow-primary border-radius-lg p-3" style="margin: 8%; background-color: white; color: #a4cbc;">✨ Generate ✨</button>
             </div>
           </div>
         </div>
