--- a/html/generate-email-titles.html
+++ b/html/generate-email-titles.html
@@ -34,10 +34,10 @@
   <!-- CSS Files -->
   <link id="pagestyle" href="../assets/css/material-kit.css?v=3.0.4" rel="stylesheet" />
   <style>
-    .cardBackground{
-      background-position: center;
+    #main-container{
       background-image: url('../assets/img/illustrations/wave1.jpeg');
       background-repeat: no-repeat;
+      background-position: center;
       background-size: cover;
     }
   </style>
@@ -73,11 +73,10 @@
 </div>
 
 <!-- -------- START HEADER 8 w/ card over right bg image ------- -->
-<div class="container-fluid" style="padding-left:0;">
+<div id="main-container" class="container-fluid" style="padding-left:0;">
   <div class="row">
-    
     <div class="col-6 d-flex justify-content-center text-center flex-column">
-      <div class="card-body cardBackground">
+      <div class="card-body">
         <h1 id="generated-email-h4" contenteditable="true" class="card-title" style="padding:5rem; color:white; font-family: 'Lato'; font-size: 700%;">Your personalized email subject</h1>
         <div id="generated-email-body" class="text-white" style="margin: 8%; text-align: left;"></div>
         <div id="spinner" class="spinner-border text-primary text-white d-none align-self-center" role="status"></div>
@@ -97,19 +96,19 @@
         </div> -->
         <div class="card-body">
           <!--                Description-->
-          <div class="form-group mb-0 mt-md-0 mt-4">
-            <div class="input-group input-group-static mb-4">
+          <div class="form-group mb-0 mt-md-0 mt-2">
+            <div class="input-group input-group-static mb-2">
               <label>Rough email draft</label>
               <textarea id="email-description" name="message" class="form-control" rows="4" placeholder="Welcome email assuring a safe pet journey"></textarea>
             </div>
           </div>
           <div class="form-group mb-0 mt-md-0 mt-4">
-            <div class="input-group input-group-static mb-4">
+            <div class="input-group input-group-static mb-2">
               <button type="button" id="brand-guidelines-button" class="btn btn-md  bg-gradient-primary mb-0 me-1 mt-2 mt-md-0" data-bs-toggle="modal" data-bs-target="#exampleModalCenter">Update Brand Guidelines</button>
             </div>
           </div>
-          <div class="form-group mb-0 mt-md-0 mt-4">
-            <div class="input-group input-group-static mb-4">
+          <div class="form-group mb-0 mt-md-0 mt-2">
+            <div class="input-group input-group-static mb-2">
               <label>Personalization tags</label>
               <table class="table table-hover" name="personalization-elements">
                 <tbody>
@@ -152,8 +151,8 @@
               </table>
             </div>
           </div>
-          <div class="form-group mb-0 mt-md-0 mt-4">
-            <div class="input-group input-group-static mb-4">
+          <div class="form-group mb-0 mt-md-0 mt-2">
+            <div class="input-group input-group-static mb-2">
               <div class="dropdown">
                 <label for="tone">Tone</label><br>
                 <select name="tone" id="tone" class="btn btn-sm  bg-gradient-primary btn-default dropdown-toggle">
