--- a/html/generate-email-titles.html
+++ b/html/generate-email-titles.html
@@ -34,7 +34,7 @@
   <!-- CSS Files -->
   <link id="pagestyle" href="../assets/css/material-kit.css?v=3.0.4" rel="stylesheet" />
   <style>
-    #main-container{
+    #email-content-panel{
       background-image: url('../assets/img/illustrations/wave1.jpeg');
       background-repeat: no-repeat;
       background-position: center;
@@ -73,15 +73,15 @@
 </div>
 
 <!-- -------- START HEADER 8 w/ card over right bg image ------- -->
-<div id="main-container" class="container-fluid" style="padding-left:0;">
+<div class="container-fluid" style="padding-left:0;">
   <div class="row">
-    <div class="col-6 d-flex justify-content-center text-center flex-column">
+    <div id="email-content-panel" class="col-6 d-flex justify-content-center text-center flex-column">
       <div class="card-body">
         <h1 id="generated-email-h4" contenteditable="true" class="card-title" style="padding:5rem; color:white; font-family: 'Lato'; font-size: 700%;">Your personalized email subject</h1>
         <div id="generated-email-body" class="text-white" style="margin: 8%; text-align: left;"></div>
         <div id="spinner" class="spinner-border text-primary text-white d-none align-self-center" role="status"></div>
         <div class="d-grid gap-2">
-          <button id="generate-email-button" type="button" class="btn btn-primary gen-title bg-gradient-primary shadow-primary border-radius-lg p-3" style="margin: 8%; background-color: white; color: #a4cbc;">✨ Generate ✨</button>
+          <button id="generate-email-button" type="button" class="btn gen-title shadow-primary border-radius-lg p-3" style="margin: 8%; background-color: white; color: #a4cbc;">✨ Generate ✨</button>
         </div>
       </div>
     </div>
