--- a/html/generate-email-titles.html
+++ b/html/generate-email-titles.html
@@ -75,18 +75,9 @@
 <!-- -------- START HEADER 8 w/ card over right bg image ------- -->
 <div class="container-fluid" style="padding-left:0;">
   <div class="row">
-    <div id="email-content-panel" class="col-6 d-flex justify-content-center text-center flex-column">
-      <div class="card-body">
-        <h1 id="generated-email-h4" contenteditable="true" class="card-title" style="padding:5rem; color:white; font-family: 'Lato'; font-size: 700%;">Your personalized email subject</h1>
-        <div id="generated-email-body" class="text-white" style="margin: 8%; text-align: left;"></div>
-        <div id="spinner" class="spinner-border text-primary text-white d-none align-self-center" role="status"></div>
-        <div class="d-grid gap-2">
-          <button id="generate-email-button" type="button" class="btn gen-title shadow-primary border-radius-lg p-3" style="margin: 8%; background-color: white; color: #a4cbc;">✨ Generate ✨</button>
-        </div>
-      </div>
-    </div>
 
-    <div class="col-3 d-flex flex-column">
+
+    <div class="col-3 d-flex justify-content-center flex-column" style="margin: auto;">
       <div class="me-3 card d-flex justify-content-center shadow-lg my-sm-8">
         <div class="bg-gradient-primary shadow-primary border-radius-lg p-3">
             <h6 class="text-white text-primary mb-0">Email Context</h6>
@@ -182,6 +173,16 @@
               </div>
             </div>
           </form>
+        </div>
+      </div>
+    </div>
+    <div id="email-content-panel" class="col-8 d-flex justify-content-center text-center flex-column">
+      <div class="card-body">
+        <h1 id="generated-email-h4" contenteditable="true" class="card-title" style="padding:8rem; color:white; font-family: 'Lato'; font-size: 700%;">Your personalized email subject</h1>
+        <div id="generated-email-body" class="text-white" style="margin: 8%; text-align: left;"></div>
+        <div id="spinner" class="spinner-border text-primary text-white d-none align-self-center" role="status"></div>
+        <div class="d-grid gap-2">
+          <button id="generate-email-button" type="button" class="btn gen-title shadow-primary border-radius-lg p-3" style="margin: 8%; background-color: white; color: #a4cbc;">✨ Generate ✨</button>
         </div>
       </div>
     </div>
