--- a/html/generate-email-titles.html
+++ b/html/generate-email-titles.html
@@ -133,7 +133,7 @@
           </div>
           <div class="form-group mb-0 mt-2">
             <div class="input-group input-group-static mb-2">
-                <h6>Tone</h6>
+                <h6 class="self-align-center">Tone</h6>
                 <select name="tone" id="tone" class="form-select dropdown mx-3">
                   <option value="formal">Formal</option>
                   <option value="vibrant">Vibrant</option>
@@ -312,18 +312,19 @@
           const followed = evaluation[key]["followed"];
           const not_followed = evaluation[key]["not_followed"];
 
-          if (followed != undefined && followed.length > 0){
-            let leadParagraph = $('<p class="lead text-white text-start opacity-8 fadeIn3 fadeInBottom"></p>');
-            const text = check + " " + followed;
-            leadParagraph.html(text);
-            followed_reasons.push(leadParagraph);
-          }
+          const is_valid_not_followed = not_followed != undefined && not_followed.length > 0;
+          const is_valid_followed = followed != undefined && followed.length > 0;
 
-          if (not_followed != undefined && not_followed.length > 0){
+          if (is_valid_not_followed){
             let leadParagraph = $('<p class="lead text-white text-start opacity-8 fadeIn3 fadeInBottom"></p>');
             const text = cross + " " + not_followed;
             leadParagraph.html(text);
             not_followed_reasons.push(leadParagraph);
+          } else if (is_valid_followed){
+            let leadParagraph = $('<p class="lead text-white text-start opacity-8 fadeIn3 fadeInBottom"></p>');
+            const text = check + " " + followed;
+            leadParagraph.html(text);
+            followed_reasons.push(leadParagraph);
           }
         }
       }
