--- a/html/generate-email-titles.html
+++ b/html/generate-email-titles.html
@@ -34,12 +34,21 @@
   <!-- CSS Files -->
   <link id="pagestyle" href="../assets/css/material-kit.css?v=3.0.4" rel="stylesheet" />
   <style>
-    #email-content-panel{
+    #email-content-panel {
       background-image: url('../assets/img/illustrations/wave1.jpeg');
       background-repeat: no-repeat;
       background-position: center;
       background-size: cover;
     }
+
+    #tone {
+      text-align: center;
+    }
+
+    #carousel-controls {
+      padding: 20px
+    }
+
   </style>
 </head>
 
@@ -154,7 +163,6 @@
           <table class="table">
             <tbody>
               <tr id="carousel-container"></tr>
-            </div>
             </tbody>
           </table>
         </div>
@@ -211,8 +219,8 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script>
 
-    // const API_BASE_URL = "https://choiceserver.duckdns.org:8000/api/v1/";
-    const API_BASE_URL = "http://127.0.0.1:8000/api/v1/";
+    const API_BASE_URL = "https://choiceserver.duckdns.org:8000/api/v1/";
+    //const API_BASE_URL = "http://127.0.0.1:8000/api/v1/";
 
     const bsCollapse = new bootstrap.Collapse("#collapsible-menu", {
       toggle: false
@@ -293,8 +301,8 @@
     }
 
     function generate_evaluation_item(evaluation){
-      let carouselItem = $('<td class="text-wrap col-6"></td>');
-      let headingLarge = $('<h1 class="text-white fadeIn2 fadeInBottom"></h1>');
+      let carouselItem = $('<td class="p-5 text-wrap col-6"></td>');
+      let headingLarge = $('<h3 class="text-white fadeIn2 fadeInBottom"></h3>');
       headingLarge.text(evaluation.subject);
 
       const check = '<svg xmlns=http://www.w3.org/2000/svg" width="16" height="16" fill="#66ff00" class="bi bi-check-circle" viewBox="0 0 16 16"><path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/><path d="M10.97 4.97a.235.235 0 0 0-.02.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05"/></svg>'
@@ -317,12 +325,12 @@
 
           if (is_valid_not_followed){
             let leadParagraph = $('<p class="lead text-white text-start opacity-8 fadeIn3 fadeInBottom"></p>');
-            const text = cross + " " + not_followed;
+            const text = cross + " " + key + ": " + not_followed;
             leadParagraph.html(text);
             not_followed_reasons.push(leadParagraph);
           } else if (is_valid_followed){
             let leadParagraph = $('<p class="lead text-white text-start opacity-8 fadeIn3 fadeInBottom"></p>');
-            const text = check + " " + followed;
+            const text = check + " " + key + ": " + followed;
             leadParagraph.html(text);
             followed_reasons.push(leadParagraph);
           }
@@ -336,8 +344,8 @@
     }
 
     function generate_email_carousel_item(variant){
-      let carouselItem = $('<td class="col-6 text-wrap bg-gradient-dark border-radius-lg"></td>');
-      let headingLarge = $('<h1 class="text-white fadeIn2 fadeInBottom"></h1>');
+      let carouselItem = $('<td class="p-5 col-6 text-wrap bg-gradient-dark border-radius-lg"></td>');
+      let headingLarge = $('<h3 class="text-white fadeIn2 fadeInBottom"></h3>');
       headingLarge.text(variant.subject);
       
       const check = '<svg xmlns=http://www.w3.org/2000/svg" width="16" height="16" fill="#66ff00" class="bi bi-check-circle" viewBox="0 0 16 16"><path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/><path d="M10.97 4.97a.235.235 0 0 0-.02.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05"/></svg>'
@@ -350,7 +358,7 @@
         if (key in variant.reasons){
           let leadParagraph = $('<p class="lead text-white text-start opacity-8 fadeIn3 fadeInBottom"></p>');
           const value = variant.reasons[key];
-          const text = check + " " + value;
+          const text = check + " " + key + ": " + value;
           leadParagraph.html(text);
           carouselItem.append(leadParagraph);
         }
