--- a/html/generate-email-titles.html
+++ b/html/generate-email-titles.html
@@ -342,7 +342,7 @@
     }
 
     function generate_email_carousel_item(variant){
-      let carouselItem = $('<td class="p-5 col-6 text-wrap bg-gradient-dark border-radius-lg"></td>');
+      let carouselItem = $('<td class="p-5 col-6 text-wrap bg-dark border-radius-lg"></td>');
       let headingLarge = $('<h3 class="text-white fadeIn2 fadeInBottom"></h3>');
       headingLarge.text(variant.subject);
       
