add a missing comma

--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
       }
       window.onload = function () {
         google.accounts.id.initialize({
-          client_id: "590159487641-ep1t2jqir0nhr04g7bpdpjkbuaiueoaj.apps.googleusercontent.com"
+          client_id: "590159487641-ep1t2jqir0nhr04g7bpdpjkbuaiueoaj.apps.googleusercontent.com",
           callback: handleCredentialResponse
         });
         google.accounts.id.renderButton(
