--- a/login.html
+++ b/login.html
@@ -1,5 +1,23 @@
 <html>
   <body>
+    <div id="g_id_onload"
+     data-client_id="590159487641-ep1t2jqir0nhr04g7bpdpjkbuaiueoaj.apps.googleusercontent.com"
+     data-context="signin"
+     data-ux_mode="popup"
+     data-callback="handleCredentialResponse"
+     data-auto_select="true"
+     data-itp_support="true">
+</div>
+
+<div class="g_id_signin"
+     data-type="standard"
+     data-shape="rectangular"
+     data-theme="outline"
+     data-text="signin_with"
+     data-size="large"
+     data-locale="en-US"
+     data-logo_alignment="left">
+</div>
     <script src="https://accounts.google.com/gsi/client" async></script>
     <script>
       function handleCredentialResponse(response) {
