--- a/html/generate-email-titles.html
+++ b/html/generate-email-titles.html
@@ -219,8 +219,8 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script>
 
-    const API_BASE_URL = "https://choiceserver.duckdns.org:8000/api/v1/";
-    // const API_BASE_URL = "http://127.0.0.1:8000/api/v1/";
+    // const API_BASE_URL = "https://choiceserver.duckdns.org:8000/api/v1/";
+    const API_BASE_URL = "http://127.0.0.1:8000/api/v1/";
 
     const bsCollapse = new bootstrap.Collapse("#collapsible-menu", {
       toggle: false
@@ -309,12 +309,29 @@
       carouselItem.append(headingRow);
       
       const check = '<svg xmlns=http://www.w3.org/2000/svg" width="16" height="16" fill="#66ff00" class="bi bi-check-circle" viewBox="0 0 16 16"><path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/><path d="M10.97 4.97a.235.235 0 0 0-.02.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05"/></svg>';
+
+      const cross = '<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="red" class="bi bi-x-circle" viewBox="0 0 16 16"><path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/><path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/></svg>'
       
       if ("score" in variant){
         let paragraphRow = $('<div class="row"></div>')
         let leadParagraph = $('<p class="lead text-white text-start opacity-8 fadeIn3 fadeInBottom"></p>');
         const score = variant.score;
         const text = check + " " + "Brand adherence: " + score;
+        leadParagraph.html(text);
+        paragraphRow.append(leadParagraph);
+        carouselItem.append(paragraphRow);
+      }
+
+      if ("safety_violation" in variant){
+        let paragraphRow = $('<div class="row"></div>')
+        let leadParagraph = $('<p class="lead text-white text-start opacity-8 fadeIn3 fadeInBottom"></p>');
+        let violation = variant.safety_violation
+        let icon = cross
+        if (violation === null) {
+          icon = check
+          violation = "None"
+        }
+        const text = icon + " " + "Safety Violation: " + violation;
         leadParagraph.html(text);
         paragraphRow.append(leadParagraph);
         carouselItem.append(paragraphRow);
