--- a/html/generate-email-titles.html
+++ b/html/generate-email-titles.html
@@ -219,8 +219,8 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script>
 
-    // const API_BASE_URL = "https://choiceserver.duckdns.org:8000/api/v1/";
-    const API_BASE_URL = "http://127.0.0.1:8000/api/v1/";
+    const API_BASE_URL = "https://choiceserver.duckdns.org:8000/api/v1/";
+    // const API_BASE_URL = "http://127.0.0.1:8000/api/v1/";
 
     const bsCollapse = new bootstrap.Collapse("#collapsible-menu", {
       toggle: false
